--- a/music.html
+++ b/music.html
@@ -15,7 +15,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="#" data-translate="TITLE">偶像夢幻祭2 Music耗鑽計算器</a>
-            <div class="lang">
+            <select class="lang">
                 <option value="zh-Hant">繁體中文</option>
                 <option value="zh-Hans">简体中文</option>
                 <option value="kr">English</option>
