--- a/music.html
+++ b/music.html
@@ -16,10 +16,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="#" data-translate="TITLE">偶像夢幻祭2 Music耗鑽計算器</a>
             <select class="lang">
-                <option value="zh-Hant">繁體中文</option>
-                <option value="zh-Hans">简体中文</option>
-                <option value="kr">English</option>
-                <option value="ja">日本語</option>
+                <option value="kr">한뮤직</option>
             </select>
         </nav>
         <div class="card">
