--- a/music.html
+++ b/music.html
@@ -8,16 +8,46 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/m.css">
         <script src="js/Globals.js"></script>
         <script src="js/calc.js"></script>
+	<style>
+body {
+    background-color: #2d2d2d;
+}
+                #topMenu {
+                        height: 60px;
+                        width: 850px;
+                }
+                #topMenu ul li {
+	list-style: none;
+                        color: white;
+                        background-color: #2d2d2d;
+                        float: left;
+                        line-height: 55px;
+                        vertical-align: middle;
+                        text-align: center;
+                }
+                #topMenu .menuLink {
+                        text-decoration:none;
+                        color: white;
+                        display: block;
+                        width: 200px;
+                        font-size: 15px;
+                        font-weight: bold;
+                }
+                #topMenu .menuLink:hover {
+                        color: red;
+                        background-color: #4d4d4d;
+                }
+	</style>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#" data-translate="TITLE">偶像夢幻祭2 Music耗鑽計算器</a>
-            <select class="lang">
-                <option value="kr">한뮤직</option>
-            </select>
+        <nav id="topMenu">
+                <ul>
+                        <li><a class="menuLink">다이아계산기</a></li>
+		<li><a class="menuLink">5성 카드 스탯</a></li>
+                </ul>
+        </nav>
         </nav>
         <div class="card">
             <h4 class="card-header" data-translate="INPUT">輸入資料</h4>
