--- a/music.html
+++ b/music.html
@@ -45,7 +45,7 @@ body {
         <nav id="topMenu">
                 <ul>
                         <li><a class="menuLink">다이아계산기</a></li>
-		<li><a class="menuLink" href="https://dakitmusic.github.io/kr-es-calc/5star.html">5성 카드 스탯</a></li>
+		<li><a class="menuLink" href="https://dakitmusic.github.io/kr-es-calc/5star.html">5성 카드 스탯(업데이트중)</a></li>
                 </ul>
         </nav>
         </nav>
