--- a/5star.html
+++ b/5star.html
@@ -423,6 +423,217 @@ nav {
 		<td> 61,499 </td>
 		<td> 123,654 </td>
 		<td nowrap> 2021/01/17 </br> 피쳐 스카우트 이바라편 </td>
+	</tr>
+	<tr bgcolor=#add8e6>
+		<td nowrap> [기라성의 리더] 히다카 호쿠토 </td>
+		<td> <img src="5star/[기라성의 리더] 히다카 호쿠토.jpg" width=120 height=160> </td>
+		<td> <img src="5star/[기라성의 리더] 히다카 호쿠토(개화).jpg" width=120 height=160> </td>
+		<td> brilliant </td>
+		<td> 23,485 </td>
+		<td> 41,236 </td>
+		<td> 27,096 </td>
+		<td> 91,817 </td>
+		<td> 31,141 </td>
+		<td> 57,922 </td>
+		<td> 30,642 </td>
+		<td> 119,705 </td>
+		<td nowrap> 2020/12/17 </br> 게임 출시 통상 </td>
+	</tr>
+	<tr bgcolor=#bdecb6>
+		<td nowrap> [축제의 리더] 미케지마 마다라 </td>
+		<td> <img src="5star/[축제의 리더] 미케지마 마다라.jpg" width=120 height=160> </td>
+		<td> <img src="5star/[축제의 리더] 미케지마 마다라(개화).jpg" width=120 height=160> </td>
+		<td> glitter </td>
+		<td> 27,232 </td>
+		<td> 35,921 </td>
+		<td> 28,367 </td>
+		<td> 91,520 </td>
+		<td> 30,055 </td>
+		<td> 53,810 </td>
+		<td> 37,319 </td>
+		<td> 121,184 </td>
+		<td nowrap> 2020/12/17 </br> 게임 출시 통상 </td>
+	</tr>
+	<tr bgcolor=#fbceb1>
+		<td nowrap> [마술의 리더] 사카사키 나츠메 </td>
+		<td> <img src="5star/[마술의 리더] 사카사키 나츠메.jpg" width=120 height=160> </td>
+		<td> <img src="5star/[마술의 리더] 사카사키 나츠메(개화).jpg" width=120 height=160> </td>
+		<td> sparkle </td>
+		<td> 43,045 </td>
+		<td> 20,266 </td>
+		<td> 27,904 </td>
+		<td> 91,251 </td>
+		<td> 53,359 </td>
+		<td> 23,896 </td>
+		<td> 35,643 </td>
+		<td> 112,898 </td>
+		<td nowrap> 2020/12/17 </br> 게임 출시 통상 </td>
+	</tr>
+	<tr bgcolor=#fbceb1>
+		<td nowrap> [쌍성의 리더] 아오이 히나타 </td>
+		<td> <img src="5star/[쌍성의 리더] 아오이 히나타.jpg" width=120 height=160> </td>
+		<td> <img src="5star/[쌍성의 리더] 아오이 히나타(개화).jpg" width=120 height=160> </td>
+		<td> sparkle </td>
+		<td> 50,727 </td>
+		<td> 19,464 </td>
+		<td> 20,569 </td>
+		<td> 90,760 </td>
+		<td> 67,595 </td>
+		<td> 27,241 </td>
+		<td> 27,335 </td>
+		<td> 122,171 </td>
+		<td nowrap> 2020/12/17 </br> 게임 출시 통상 </td>
+	</tr>
+	<tr bgcolor=#add8e6>
+		<td nowrap> [홍의 리더] 하스미 케이토 </td>
+		<td> <img src="5star/[홍의 리더] 하스미 케이토.jpg" width=120 height=160> </td>
+		<td> <img src="5star/[홍의 리더] 하스미 케이토(개화).jpg" width=120 height=160> </td>
+		<td> brilliant </td>
+		<td> 24,892 </td>
+		<td> 51,270 </td>
+		<td> 14,561 </td>
+		<td> 90,723 </td>
+		<td> 30,383 </td>
+		<td> 69,892 </td>
+		<td> 22,056 </td>
+		<td> 122,331 </td>
+		<td nowrap> 2020/12/17 </br> 게임 출시 통상 </td>
+	</tr>
+	<tr bgcolor=#fbceb1>
+		<td nowrap> [정의의 리더] 모리사와 치아키 </td>
+		<td> <img src="5star/[정의의 리더] 모리사와 치아키.jpg" width=120 height=160> </td>
+		<td> <img src="5star/[정의의 리더] 모리사와 치아키(개화).jpg" width=120 height=160> </td>
+		<td> sparkle </td>
+		<td> 20,531 </td>
+		<td> 25,198 </td>
+		<td> 43,669 </td>
+		<td> 89,383 </td>
+		<td> 26,954 </td>
+		<td> 29,019 </td>
+		<td> 57,548 </td>
+		<td> 113,521 </td>
+		<td nowrap> 2020/12/17 </br> 게임 출시 통상 </td>
+	</tr>
+	<tr bgcolor=#bdecb6>
+		<td nowrap> [충성의 리더] 스오우 츠카사 </td>
+		<td> <img src="5star/[충성의 리더] 스오우 츠카사.jpg" width=120 height=160> </td>
+		<td> <img src="5star/[충성의 리더] 스오우 츠카사(개화).jpg" width=120 height=160> </td>
+		<td> glitter </td>
+		<td> 44,570 </td>
+		<td> 19,922 </td>
+		<td> 23,465 </td>
+		<td> 87,957 </td>
+		<td> 56,532 </td>
+		<td> 28,644 </td>
+		<td> 29,505 </td>
+		<td> 114,681 </td>
+		<td nowrap> 2020/12/17 </br> 게임 출시 통상 </td>
+	</tr>
+	<tr bgcolor=#fbceb1>
+		<td nowrap> [손 패의 리더] 아마기 히이로 </td>
+		<td> <img src="5star/[손 패의 리더] 아마기 히이로.jpg" width=120 height=160> </td>
+		<td> <img src="5star/[손 패의 리더] 아마기 히이로.jpg" width=120 height=160> </td>
+		<td> sparkle </td>
+		<td> 46,340 </td>
+		<td> 19,339 </td>
+		<td> 21,592 </td>
+		<td> 87,271 </td>
+		<td> 60,114 </td>
+		<td> 26,719 </td>
+		<td> 33,070 </td>
+		<td> 119,903 </td>
+		<td nowrap> 2020/12/17 </br> 게임 출시 통상 </td>
+	</tr>
+	<tr bgcolor=#fffacd>
+		<td nowrap> [천상의 리더] 텐쇼인 에이치 </td>
+		<td> <img src="5star/[천상의 리더] 텐쇼인 에이치.jpg" width=120 height=160> </td>
+		<td> <img src="5star/[천상의 리더] 텐쇼인 에이치(개화).jpg" width=120 height=160> </td>
+		<td> flash </td>
+		<td> 27,623 </td>
+		<td> 18,072 </td>
+		<td> 41,306 </td>
+		<td> 87,001 </td>
+		<td> 34,315 </td>
+		<td> 27,778 </td>
+		<td> 57,725 </td>
+		<td> 119,818 </td>
+		<td nowrap> 2020/12/17 </br> 게임 출시 통상 </td>
+	</tr>
+	<tr bgcolor=#fffacd>
+		<td nowrap> [꿀벌의 리더] 아마기 린네 </td>
+		<td> <img src="5star/[꿀벌의 리더] 아마기 린네.jpg" width=120 height=160> </td>
+		<td> <img src="5star/[꿀벌의 리더] 아마기 린네(개화).jpg" width=120 height=160> </td>
+		<td> flash </td>
+		<td> 22,891 </td>
+		<td> 18,081 </td>
+		<td> 46,006 </td>
+		<td> 86,978 </td>
+		<td> 30,137 </td>
+		<td> 22,123 </td>
+		<td> 69,631 </td>
+		<td> 121,621 </td>
+		<td nowrap> 2020/12/17 </br> 게임 출시 통상 </td>
+	</tr>
+	<tr bgcolor=#bdecb6>
+		<td nowrap> [낙원의 리더] 란 나기사 </td>
+		<td> <img src="5star/[낙원의 리더] 란 나기사.jpg" width=120 height=160> </td>
+		<td> <img src="5star/[낙원의 리더] 란 나기사(개화).jpg" width=120 height=160> </td>
+		<td> glitter </td>
+		<td> 19,078 </td>
+		<td> 16,987 </td>
+		<td> 50,274 </td>
+		<td> 86,339 </td>
+		<td> 22,967 </td>
+		<td> 23,532 </td>
+		<td> 64,846 </td>
+		<td> 111,345 </td>
+		<td nowrap> 2020/12/17 </br> 게임 출시 통상 </td>
+	</tr>
+	<tr bgcolor=#add8e6>
+		<td nowrap> [토끼 무리의 리더] 마시로 토모야 </td>
+		<td> <img src="5star/[토끼 무리의 리더] 마시로 토모야.jpg" width=120 height=160> </td>
+		<td> <img src="5star/[토끼 무리의 리더] 마시로 토모야(개화).jpg" width=120 height=160> </td>
+		<td> brilliant </td>
+		<td> 46,552 </td>
+		<td> 19,563 </td>
+		<td> 19,348 </td>
+		<td> 95,463 </td>
+		<td> 66,810 </td>
+		<td> 24,509 </td>
+		<td> 26,225 </td>
+		<td> 117,544 </td>
+		<td nowrap> 2020/12/17 </br> 게임 출시 통상 </td>
+	</tr>
+	<tr bgcolor=#fffacd>
+		<td nowrap> [마물의 리더] 사쿠마 레이 </td>
+		<td> <img src="5star/[마물의 리더] 사쿠마 레이.jpg" width=120 height=160> </td>
+		<td> <img src="5star/[마물의 리더] 사쿠마 레이(개화).jpg" width=120 height=160> </td>
+		<td> flash </td>
+		<td> 24,082 </td>
+		<td> 40,704 </td>
+		<td> 20,368 </td>
+		<td> 85,100 </td>
+		<td> 30,472 </td>
+		<td> 61,017 </td>
+		<td> 24,702 </td>
+		<td> 116,191 </td>
+		<td nowrap> 2020/12/17 </br> 게임 출시 통상 </td>
+	</tr>
+	<tr bgcolor=#add8e6>
+		<td nowrap> [예술의 리더] 이츠키 슈 </td>
+		<td> <img src="5star/[예술의 리더] 이츠키 슈.jpg" width=120 height=160> </td>
+		<td> <img src="5star/[예술의 리더] 이츠키 슈(개화).jpg" width=120 height=160> </td>
+		<td> brilliant </td>
+		<td> 21,712 </td>
+		<td> 18,325 </td>
+		<td> 44,396 </td>
+		<td> 84,433 </td>
+		<td> 27,884 </td>
+		<td> 23,249 </td>
+		<td> 66,334 </td>
+		<td> 117,467 </td>
+		<td nowrap> 2020/12/17 </br> 게임 출시 통상 </td>
+	</tr>
   </tbody>
 </table>
 
