--- a/5star.html
+++ b/5star.html
@@ -612,7 +612,7 @@ nav {
 	<tr bgcolor=#add8e6>
 		<td nowrap> [전진의 모터쇼]아마기 히이로 </td>
 		<td> <img src="5star/[전진의 모터쇼]아마기 히이로.png" width=120 height=160> </td>
-		<td> <img src="5star/[전진의 모터쇼]아마기 히이로.png" width=120 height=160> </td>
+		<td> <img src="5star/[전진의 모터쇼]아마기 히이로().png" width=120 height=160> </td>
 		<td> brilliant </td>
 		<td> 23,369 </td>
 		<td> 46,518 </td>
