--- a/5star.html
+++ b/5star.html
@@ -14,7 +14,7 @@ body {
                         background-color: #2d2d2d;
                         float: left;
                         line-height: 55px;
-                        vertical-align: middle;오후 12:51 2021-02-03
+                        vertical-align: middle;
                         text-align: center;
                 }
                 #topMenu .menuLink {
@@ -221,16 +221,11 @@ margin: auto;
   }
   th {
     background-color: #e2e2e2;
-        font-weight: 600;
+        font-weight: 700;
   }
   td {
-        font-weight: 600;
+        font-weight: 400;
   }
-nav {
-  display: right;
-  flex-direction: row;
-  justify-content: space-between;
-}
  
 </style>
         <nav id="topMenu">
@@ -265,379 +260,379 @@ nav {
   </thead>
   <tbody>
 	<tr bgcolor=#add8e6>
-		<td nowrap> [기라성의 리더] 히다카 호쿠토 </td>
+		<td nowrap> <b>[기라성의 리더] 히다카 호쿠토</b> </td>
 		<td> <img src="5star/[기라성의 리더] 히다카 호쿠토.jpg" width=120 height=160> </td>
 		<td> <img src="5star/[기라성의 리더] 히다카 호쿠토(개화).png" width=120 height=160> </td>
-		<td> brilliant </td>
+		<td> <b>brilliant</b> </td>
 		<td> 23,485 </td>
-		<td> 41,236 </td>
+		<td> <b>41,236</b> </td>
 		<td> 27,096 </td>
-		<td> 91,817 </td>
+		<td> <b>91,817</b> </td>
 		<td> 31,141 </td>
-		<td> 57,922 </td>
+		<td> <b>57,922</b> </td>
 		<td> 30,642 </td>
-		<td> 119,705 </td>
-		<td nowrap> 2020/12/17 </br></br> 게임 출시 통상 </td>
+		<td> <b>119,705</b> </td>
+		<td nowrap> <b>2020/12/17 </br></br> 게임 출시 통상</b> </td>
 	</tr>
 	<tr bgcolor=#fffacd>
-		<td nowrap> [꿀벌의 리더] 아마기 린네 </td>
+		<td nowrap> <b>[꿀벌의 리더] 아마기 린네</b> </td>
 		<td> <img src="5star/[꿀벌의 리더] 아마기 린네.png" width=120 height=160> </td>
 		<td> <img src="5star/[꿀벌의 리더] 아마기 린네(개화).png" width=120 height=160> </td>
-		<td> flash </td>
+		<td> <b>flash</b> </td>
 		<td> 22,891 </td>
 		<td> 18,081 </td>
-		<td> 46,006 </td>
-		<td> 86,978 </td>
+		<td> <b>46,006</b> </td>
+		<td> <b>86,978</b> </td>
 		<td> 30,137 </td>
 		<td> 22,123 </td>
-		<td> 69,631 </td>
-		<td> 121,621 </td>
-		<td nowrap> 2020/12/17 </br></br> 게임 출시 통상 </td>
+		<td> <b>69,631</b> </td>
+		<td> <b>121,621</b> </td>
+		<td nowrap> <b>2020/12/17 </br></br> 게임 출시 통상</b> </td>
 	</tr>
 	<tr bgcolor=#bdecb6>
-		<td nowrap> [낙원의 리더] 란 나기사 </td>
+		<td nowrap> <b>[낙원의 리더] 란 나기사</b> </td>
 		<td> <img src="5star/[낙원의 리더] 란 나기사.png" width=120 height=160> </td>
 		<td> <img src="5star/[낙원의 리더] 란 나기사(개화).png" width=120 height=160> </td>
-		<td> glitter </td>
+		<td> <b>glitter</b> </td>
 		<td> 19,078 </td>
 		<td> 16,987 </td>
-		<td> 50,274 </td>
-		<td> 86,339 </td>
+		<td> <b>50,274</b> </td>
+		<td> <b>86,339</b> </td>
 		<td> 22,967 </td>
 		<td> 23,532 </td>
-		<td> 64,846 </td>
-		<td> 111,345 </td>
-		<td nowrap> 2020/12/17 </br></br> 게임 출시 통상 </td>
+		<td> <b>64,846</b> </td>
+		<td> <b>111,345</b> </td>
+		<td nowrap> <b>2020/12/17 </br></br> 게임 출시 통상</b> </td>
 	</tr>
 	<tr bgcolor=#fffacd>
-		<td nowrap> [마물의 리더] 사쿠마 레이 </td>
+		<td nowrap> <b>[마물의 리더] 사쿠마 레이</b> </td>
 		<td> <img src="5star/[마물의 리더] 사쿠마 레이.png" width=120 height=160> </td>
 		<td> <img src="5star/[마물의 리더] 사쿠마 레이(개화).png" width=120 height=160> </td>
-		<td> flash </td>
+		<td> <b>flash</b> </td>
 		<td> 24,082 </td>
-		<td> 40,704 </td>
+		<td> <b>40,704</b> </td>
 		<td> 20,368 </td>
-		<td> 85,100 </td>
+		<td> <b>85,100</b> </td>
 		<td> 30,472 </td>
-		<td> 61,017 </td>
+		<td> <b>61,017</b> </td>
 		<td> 24,702 </td>
-		<td> 116,191 </td>
-		<td nowrap> 2020/12/17 </br></br> 게임 출시 통상 </td>
+		<td> <b>116,191</b> </td>
+		<td nowrap> <b>2020/12/17 </br></br> 게임 출시 통상</b> </td>
 	</tr>
 	<tr bgcolor=#fbceb1>
-		<td nowrap> [마술의 리더] 사카사키 나츠메 </td>
+		<td nowrap> <b>[마술의 리더] 사카사키 나츠메</b> </td>
 		<td> <img src="5star/[마술의 리더] 사카사키 나츠메.png" width=120 height=160> </td>
 		<td> <img src="5star/[마술의 리더] 사카사키 나츠메(개화).png" width=120 height=160> </td>
-		<td> sparkle </td>
-		<td> 43,045 </td>
+		<td> <b>sparkle</b> </td>
+		<td> <b>43,045</b> </td>
 		<td> 20,266 </td>
 		<td> 27,904 </td>
-		<td> 91,251 </td>
-		<td> 53,359 </td>
+		<td> <b>91,251</b> </td>
+		<td> <b>53,359</b> </td>
 		<td> 23,896 </td>
 		<td> 35,643 </td>
-		<td> 112,898 </td>
-		<td nowrap> 2020/12/17 </br></br> 게임 출시 통상 </td>
+		<td> <b>112,898</b> </td>
+		<td nowrap> <b>2020/12/17 </br></br> 게임 출시 통상</b> </td>
 	</tr>
 	<tr bgcolor=#fbceb1>
-		<td nowrap> [손 패의 리더] 아마기 히이로 </td>
+		<td nowrap> <b>[손 패의 리더] 아마기 히이로</b> </td>
 		<td> <img src="5star/[손 패의 리더] 아마기 히이로.png" width=120 height=160> </td>
 		<td> <img src="5star/[손 패의 리더] 아마기 히이로(개화).png" width=120 height=160> </td>
-		<td> sparkle </td>
-		<td> 46,340 </td>
+		<td> <b>sparkle</b> </td>
+		<td> <b>46,340</b> </td>
 		<td> 19,339 </td>
 		<td> 21,592 </td>
-		<td> 87,271 </td>
-		<td> 60,114 </td>
+		<td> <b>87,271</b> </td>
+		<td> <b>60,114</b> </td>
 		<td> 26,719 </td>
 		<td> 33,070 </td>
-		<td> 119,903 </td>
-		<td nowrap> 2020/12/17 </br></br> 게임 출시 통상 </td>
+		<td> <b>119,903</b> </td>
+		<td nowrap> <b>2020/12/17 </br></br> 게임 출시 통상</b> </td>
 	</tr>
 	<tr bgcolor=#fbceb1>
-		<td nowrap> [쌍성의 리더] 아오이 히나타 </td>
+		<td nowrap> <b>[쌍성의 리더] 아오이 히나타</b> </td>
 		<td> <img src="5star/[쌍성의 리더] 아오이 히나타.jpg" width=120 height=160> </td>
 		<td> <img src="5star/[쌍성의 리더] 아오이 히나타(개화).png" width=120 height=160> </td>
-		<td> sparkle </td>
-		<td> 50,727 </td>
+		<td> <b>sparkle</b> </td>
+		<td> <b>50,727</b> </td>
 		<td> 19,464 </td>
 		<td> 20,569 </td>
-		<td> 90,760 </td>
-		<td> 67,595 </td>
+		<td> <b>90,760</b> </td>
+		<td> <b>67,595</b> </td>
 		<td> 27,241 </td>
 		<td> 27,335 </td>
-		<td> 122,171 </td>
-		<td nowrap> 2020/12/17 </br></br> 게임 출시 통상 </td>
+		<td> <b>122,171</b> </td>
+		<td nowrap> <b>2020/12/17 </br></br> 게임 출시 통상 </b></td>
 	</tr>
 	<tr bgcolor=#add8e6>
-		<td nowrap> [예술의 리더] 이츠키 슈 </td>
+		<td nowrap> <b>[예술의 리더] 이츠키 슈</b> </td>
 		<td> <img src="5star/[예술의 리더] 이츠키 슈.jpg" width=120 height=160> </td>
 		<td> <img src="5star/[예술의 리더] 이츠키 슈(개화).jpg" width=120 height=160> </td>
-		<td> brilliant </td>
+		<td> <b>brilliant</b> </td>
 		<td> 21,712 </td>
 		<td> 18,325 </td>
-		<td> 44,396 </td>
-		<td> 84,433 </td>
+		<td> <b>44,396</b> </td>
+		<td> <b>84,433</b> </td>
 		<td> 27,884 </td>
 		<td> 23,249 </td>
-		<td> 66,334 </td>
-		<td> 117,467 </td>
-		<td nowrap> 2020/12/17 </br></br> 게임 출시 통상 </td>
+		<td> <b>66,334</b> </td>
+		<td> <b>117,467</b> </td>
+		<td nowrap> <b>2020/12/17 </br></br> 게임 출시 통상</b> </td>
 	</tr>
 	<tr bgcolor=#fbceb1>
-		<td nowrap> [정의의 리더] 모리사와 치아키 </td>
+		<td nowrap> <b>[정의의 리더] 모리사와 치아키</b> </td>
 		<td> <img src="5star/[정의의 리더] 모리사와 치아키.png" width=120 height=160> </td>
 		<td> <img src="5star/[정의의 리더] 모리사와 치아키(개화).png" width=120 height=160> </td>
-		<td> sparkle </td>
+		<td> <b>sparkle</b> </td>
 		<td> 20,531 </td>
 		<td> 25,198 </td>
-		<td> 43,669 </td>
-		<td> 89,383 </td>
+		<td> <b>43,669</b> </td>
+		<td> <b>89,383</b> </td>
 		<td> 26,954 </td>
 		<td> 29,019 </td>
-		<td> 57,548 </td>
-		<td> 113,521 </td>
-		<td nowrap> 2020/12/17 </br></br> 게임 출시 통상 </td>
+		<td> <b>57,548</b> </td>
+		<td> <b>113,521</b> </td>
+		<td nowrap> <b>2020/12/17 </br></br> 게임 출시 통상</b> </td>
 	</tr>
 	<tr bgcolor=#fffacd>
-		<td nowrap> [천상의 리더] 텐쇼인 에이치 </td>
+		<td nowrap> <b>[천상의 리더] 텐쇼인 에이치</b> </td>
 		<td> <img src="5star/[천상의 리더] 텐쇼인 에이치.jpg" width=120 height=160> </td>
 		<td> <img src="5star/[천상의 리더] 텐쇼인 에이치(개화).jpg" width=120 height=160> </td>
-		<td> flash </td>
+		<td> <b>flash</b> </td>
 		<td> 27,623 </td>
 		<td> 18,072 </td>
-		<td> 41,306 </td>
-		<td> 87,001 </td>
+		<td> <b>41,306</b> </td>
+		<td> <b>87,001</b> </td>
 		<td> 34,315 </td>
 		<td> 27,778 </td>
-		<td> 57,725 </td>
-		<td> 119,818 </td>
-		<td nowrap> 2020/12/17 </br></br> 게임 출시 통상 </td>
+		<td> <b>57,725</b> </td>
+		<td> <b>119,818</b> </td>
+		<td nowrap> <b>2020/12/17 </br></br> 게임 출시 통상</b> </td>
 	</tr>
 	<tr bgcolor=#bdecb6>
-		<td nowrap> [축제의 리더] 미케지마 마다라 </td>
+		<td nowrap> <b>[축제의 리더] 미케지마 마다라</b> </td>
 		<td> <img src="5star/[축제의 리더] 미케지마 마다라.jpg" width=120 height=160> </td>
 		<td> <img src="5star/[축제의 리더] 미케지마 마다라(개화).png" width=120 height=160> </td>
-		<td> glitter </td>
+		<td> <b>glitter</b> </td>
 		<td> 27,232 </td>
-		<td> 35,921 </td>
+		<td> <b>35,921</b> </td>
 		<td> 28,367 </td>
-		<td> 91,520 </td>
+		<td> <b>91,520</b> </td>
 		<td> 30,055 </td>
-		<td> 53,810 </td>
+		<td> <b>53,810</b> </td>
 		<td> 37,319 </td>
-		<td> 121,184 </td>
-		<td nowrap> 2020/12/17 </br></br> 게임 출시 통상 </td>
+		<td> <b>121,184</b> </td>
+		<td nowrap> <b>2020/12/17 </br></br> 게임 출시 통상</b> </td>
 	</tr>
 	<tr bgcolor=#bdecb6>
-		<td nowrap> [충성의 리더] 스오우 츠카사 </td>
+		<td nowrap> <b>[충성의 리더] 스오우 츠카사</b> </td>
 		<td> <img src="5star/[충성의 리더] 스오우 츠카사.png" width=120 height=160> </td>
 		<td> <img src="5star/[충성의 리더] 스오우 츠카사(개화).png" width=120 height=160> </td>
-		<td> glitter </td>
-		<td> 44,570 </td>
+		<td> <b>glitter</b> </td>
+		<td> <b>44,570</b> </td>
 		<td> 19,922 </td>
 		<td> 23,465 </td>
-		<td> 87,957 </td>
-		<td> 56,532 </td>
+		<td> <b>87,957</b> </td>
+		<td> <b>56,532</b> </td>
 		<td> 28,644 </td>
 		<td> 29,505 </td>
-		<td> 114,681 </td>
-		<td nowrap> 2020/12/17 </br></br> 게임 출시 통상 </td>
+		<td> <b>114,681</b> </td>
+		<td nowrap> <b>2020/12/17 </br></br> 게임 출시 통상</b> </td>
 	</tr>
 	<tr bgcolor=#add8e6>
-		<td nowrap> [토끼 무리의 리더] 마시로 토모야 </td>
+		<td nowrap> <b>[토끼 무리의 리더] 마시로 토모야</b> </td>
 		<td> <img src="5star/[토끼 무리의 리더] 마시로 토모야.png" width=120 height=160> </td>
 		<td> <img src="5star/[토끼 무리의 리더] 마시로 토모야(개화).png" width=120 height=160> </td>
-		<td> brilliant </td>
-		<td> 46,552 </td>
+		<td> <b>brilliant</b> </td>
+		<td> <b>46,552</b> </td>
 		<td> 19,563 </td>
 		<td> 19,348 </td>
-		<td> 95,463 </td>
-		<td> 66,810 </td>
+		<td> <b>95,463</b> </td>
+		<td> <b>66,810</b> </td>
 		<td> 24,509 </td>
 		<td> 26,225 </td>
-		<td> 117,544 </td>
-		<td nowrap> 2020/12/17 </br></br> 게임 출시 통상 </td>
+		<td> <b>117,544</b> </td>
+		<td nowrap> <b>2020/12/17 </br></br> 게임 출시 통상</b> </td>
 	</tr>
 	<tr bgcolor=#add8e6>
-		<td nowrap> [홍의 리더] 하스미 케이토 </td>
+		<td nowrap> <b>[홍의 리더] 하스미 케이토</b> </td>
 		<td> <img src="5star/[홍의 리더] 하스미 케이토.jpg" width=120 height=160> </td>
 		<td> <img src="5star/[홍의 리더] 하스미 케이토(개화).jpg" width=120 height=160> </td>
-		<td> brilliant </td>
+		<td> <b>brilliant</b> </td>
 		<td> 24,892 </td>
-		<td> 51,270 </td>
+		<td> <b>51,270</b> </td>
 		<td> 14,561 </td>
-		<td> 90,723 </td>
+		<td> <b>90,723</b> </td>
 		<td> 30,383 </td>
-		<td> 69,892 </td>
+		<td> <b>69,892</b> </td>
 		<td> 22,056 </td>
-		<td> 122,331 </td>
-		<td nowrap> 2020/12/17 </br></br> 게임 출시 통상 </td>
+		<td> <b>122,331</b> </td>
+		<td nowrap> 2020/12/17 </br></br> 게임 출시 통상</b> </td>
 	</tr>
 	<tr bgcolor=#bdecb6>
-		<td nowrap> [어둠 속의 너] 카게히라 미카 </td>
+		<td nowrap> <b>[어둠 속의 너] 카게히라 미카</b> </td>
 		<td> <img src="5star/[어둠 속의 너] 카게히라 미카.jpg" width=120 height=160> </td>
 		<td> <img src="5star/[어둠 속의 너] 카게히라 미카(개화).jpg" width=120 height=160> </td>
-		<td> glitter </td>
+		<td> <b>glitter</b> </td>
 		<td> 24,565 </td>
 		<td> 23,841 </td>
-		<td> 44,269 </td>
-		<td> 92,675 </td>
+		<td> <b>44,269</b> </td>
+		<td> <b>92,675</b> </td>
 		<td> 35,495 </td>
 		<td> 30,066 </td>
-		<td> 59,156 </td>
-		<td> 124,717 </td>
-		<td nowrap> 2020/12/19 </br></br> 피쳐 스카우트 미카편 </td>
+		<td> <b>59,156</b> </td>
+		<td> <b>124,717</b> </td>
+		<td nowrap> <b>2020/12/19 </br></br> 피쳐 스카우트 미카편</b> </td>
 	</tr>
 	<tr bgcolor=#add8e6>
-		<td nowrap> [고양이와 기사] 사쿠마 리츠 </td>
+		<td nowrap> <b>[고양이와 기사] 사쿠마 리츠</b> </td>
 		<td> <img src="5star/[고양이와 기사] 사쿠마 리츠.jpg" width=120 height=160> </td>
 		<td> <img src="5star/[고양이와 기사] 사쿠마 리츠(개화).jpg" width=120 height=160> </td>
-		<td> brilliant </td>
+		<td> <b>brilliant</b> </td>
 		<td> 19,320 </td>
-		<td> 44,711 </td>
+		<td> <b>44,711</b> </td>
 		<td> 19,519 </td>
-		<td> 83,550 </td>
+		<td> <b>83,550</b> </td>
 		<td> 24,180 </td>
-		<td> 64,194 </td>
+		<td> <b>64,194</b> </td>
 		<td> 25,953 </td>
-		<td> 114,255 </td>
-		<td nowrap> 2020/12/23 </br></br> 스카우트! 냥총사 </td>
+		<td> <b>114,255</b> </td>
+		<td nowrap> <b>2020/12/23 </br></br> 스카우트! 냥총사</b> </td>
 	</tr>
 	<tr bgcolor=#fffacd>
-		<td nowrap> [신인의 무대] 아케호시 스바루 </td>
+		<td nowrap> <b>[신인의 무대] 아케호시 스바루</b> </td>
 		<td> <img src="5star/[신인의 무대] 아케호시 스바루.jpg" width=120 height=160> </td>
 		<td> <img src="5star/[신인의 무대] 아케호시 스바루(개화).jpg" width=120 height=160> </td>
-		<td> flash </td>
-		<td> 19,694 </td>
-		<td> 43,480 </td>
-		<td> 24,189 </td>
-		<td> 89,379 </td>
-		<td> 65,344 </td>
+		<td> <b>flash</b> </td>
+		<td> <b>45,635</b> </td>
+		<td> 21,115 </td>
+		<td> 22,629 </td>
+		<td> <b>89,379</b> </td>
+		<td> <b>65,344</b> </td>
 		<td> 24,239 </td>
 		<td> 28,464 </td>
-		<td> 118,047 </td>
-		<td nowrap> 2020/12/24 </br></br> 신성단★빛나는 우주대폭발! </td>
+		<td> <b>118,047</b> </td>
+		<td nowrap> <b>2020/12/24 </br></br> 신성단★빛나는 우주대폭발!</b> </td>
 	</tr>
 	<tr bgcolor=#fbceb1>
-		<td nowrap> [정밀의 기도] 카제하야 타츠미 </td>
+		<td nowrap> <b>[정밀의 기도] 카제하야 타츠미</b> </td>
 		<td> <img src="5star/[정밀의 기도] 카제하야 타츠미.jpg" width=120 height=160> </td>
 		<td> <img src="5star/[정밀의 기도] 카제하야 타츠미(개화).jpg" width=120 height=160> </td>
-		<td> sparkle </td>
-		<td> 44,228 </td>
+		<td> <b>sparkle</b> </td>
+		<td> <b>44,228</b> </td>
 		<td> 20,666 </td>
 		<td> 28,230 </td>
-		<td> 93,124 </td>
-		<td> 60,038 </td>
+		<td> <b>93,124</b> </td>
+		<td> <b>60,038</b> </td>
 		<td> 27,454 </td>
 		<td> 36,772 </td>
-		<td> 124,264 </td>
-		<td nowrap> 2021/01/02 </br></br> 피쳐 스카우트 타츠미편 </td>
+		<td> <b>124,264</b> </td>
+		<td nowrap> <b>2021/01/02 </br></br> 피쳐 스카우트 타츠미편</b> </td>
 	</tr>
 	<tr bgcolor=#fffacd>
-		<td nowrap> [긍정적인 AtoZ] 모리사와 치아키 </td>
+		<td nowrap> <b>[긍정적인 AtoZ] 모리사와 치아키</b> </td>
 		<td> <img src="5star/[긍정적인 AtoZ] 모리사와 치아키.jpg" width=120 height=160> </td>
 		<td> <img src="5star/[긍정적인 AtoZ] 모리사와 치아키(개화).jpg" width=120 height=160> </td>
-		<td> flash </td>
+		<td> <b>flash</b> </td>
 		<td> 22,610 </td>
-		<td> 45,541 </td>
+		<td> <b>45,541</b> </td>
 		<td> 20,943 </td>
-		<td> 89,094 </td>
+		<td> <b>89,094</b> </td>
 		<td> 30,347 </td>
-		<td> 62,741 </td>
+		<td> <b>62,741</b> </td>
 		<td> 24,821 </td>
-		<td> 117,909 </td>
-		<td nowrap> 2021/01/07 </br></br> 스카우트! √AtoZ </td>
+		<td> <b>117,909</b> </td>
+		<td nowrap> <b>2021/01/07 </br></br> 스카우트! √AtoZ</b> </td>
 	</tr>
 	<tr bgcolor=#bdecb6>
-		<td nowrap> [당혹스러운 AtoZ] 하카제 카오루 </td>
+		<td nowrap> <b>[당혹스러운 AtoZ] 하카제 카오루 </td>
 		<td> <img src="5star/[당혹스러운 AtoZ] 하카제 카오루.jpg" width=120 height=160> </td>
 		<td> <img src="5star/[당혹스러운 AtoZ] 하카제 카오루(개화).jpg" width=120 height=160> </td>
-		<td> glitter </td>
+		<td> <b>glitter</b> </td>
 		<td> 25,832 </td>
 		<td> 23,730 </td>
-		<td> 45,849 </td>
-		<td> 95,411 </td>
+		<td> <b>45,849</b> </td>
+		<td> <b>95,411</b> </td>
 		<td> 31,054 </td>
 		<td> 31,101 </td>
-		<td> 61,499 </td>
-		<td> 123,654 </td>
-		<td nowrap> 2021/01/08 </br></br> SHUFFLE×사랑의 √는 AtoZ </td>
+		<td> <b>61,499</b> </td>
+		<td> <b>123,654</b> </td>
+		<td nowrap> <b>2021/01/08 </br></br> SHUFFLE×사랑의 √는 AtoZ</b> </td>
 	</tr>
 	<tr bgcolor=#add8e6>
-		<td nowrap> [거짓 지휘관] 사에구사 이바라 </td>
+		<td nowrap> <b>[거짓 지휘관] 사에구사 이바라</b> </td>
 		<td> <img src="5star/[거짓 지휘관] 사에구사 이바라.png" width=120 height=160> </td>
 		<td> <img src="5star/[거짓 지휘관] 사에구사 이바라(개화).png" width=120 height=160> </td>
-		<td> brilliant </td>
+		<td> <b>brilliant</b> </td>
 		<td> 19,694 </td>
-		<td> 43,480 </td>
+		<td> <b>43,480</b> </td>
 		<td> 24,189 </td>
-		<td> 87,363 </td>
+		<td> <b>87,363</b> </td>
 		<td> 29,019 </td>
-		<td> 60,319 </td>
+		<td> <b>60,319</b> </td>
 		<td> 31,601 </td>
-		<td> 120,939 </td>
-		<td nowrap> 2021/01/17 </br></br> 피쳐 스카우트 이바라편 </td>
+		<td> <b>120,939</b> </td>
+		<td nowrap> <b>2021/01/17 </br></br> 피쳐 스카우트 이바라편</b> </td>
 	</tr>
 	<tr bgcolor=#fffacd>
-		<td nowrap> [부지런한 허니비]오우카와 코하쿠 </td>
+		<td nowrap> <b>[부지런한 허니비]오우카와 코하쿠</b> </td>
 		<td> <img src="5star/[부지런한 허니비]오우카와 코하쿠.png" width=120 height=160> </td>
 		<td> <img src="5star/[부지런한 허니비]오우카와 코하쿠(개화).png" width=120 height=160> </td>
-		<td> flash </td>
-		<td> 19,694 </td>
-		<td> 43,480 </td>
-		<td> 24,189 </td>
-		<td> 84,711 </td>
-		<td> 63,256 </td>
+		<td> <b>flash</b> </td>
+		<td> <b>45,945</b> </td>
+		<td> 17,070 </td>
+		<td> 21,696 </td>
+		<td> <b>84,711</b> </td>
+		<td> <b>63,256</b> </td>
 		<td> 25,483 </td>
 		<td> 27,124 </td>
-		<td> 115,863 </td>
-		<td nowrap> 2021/01/22 </br></br> 스카우트! 허니비 </td>
+		<td> <b>115,863</b> </td>
+		<td nowrap> <b>2021/01/22 </br></br> 스카우트! 허니비</b> </td>
 	</tr>
 	<tr bgcolor=#fbceb1>
-		<td nowrap> [정의의 모터쇼] 나구모 테토라 </td>
+		<td nowrap> <b>[정의의 모터쇼] 나구모 테토라</b> </td>
 		<td> <img src="5star/[정의의 모터쇼] 나구모 테토라.png" width=120 height=160> </td>
 		<td> <img src="5star/[정의의 모터쇼] 나구모 테토라(개화).png" width=120 height=160> </td>
-		<td> sparkle </td>
-		<td> 47,189 </td>
+		<td> <b>sparkle</b> </td>
+		<td> <b>47,189</b> </td>
 		<td> 21,147 </td>
 		<td> 23,364 </td>
-		<td> 91,700 </td>
-		<td> 63,094 </td>
+		<td> <b>91,700</b> </td>
+		<td> <b>63,094</b> </td>
 		<td> 25,637 </td>
 		<td> 31,889 </td>
-		<td> 120,620 </td>
-		<td nowrap> 2021/01/23 </br></br> 교차하는/모터쇼 </td>
+		<td> <b>120,620</b> </td>
+		<td nowrap> <b>2021/01/23 </br></br> 교차하는/모터쇼</b> </td>
 	</tr>
 	<tr bgcolor=#add8e6>
-		<td nowrap> [전진의 모터쇼]아마기 히이로 </td>
+		<td nowrap> <b>[전진의 모터쇼]아마기 히이로</b> </td>
 		<td> <img src="5star/[전진의 모터쇼]아마기 히이로.png" width=120 height=160> </td>
-		<td> <img src="5star/[전진의 모터쇼]아마기 히이로(개화).png" width=120 height=160> </td>
-		<td> brilliant </td>
+		<td> <img src="5star/[전진의 모터쇼]아마기 히이로.png" width=120 height=160> </td>
+		<td> <b>brilliant</b> </td>
 		<td> 23,369 </td>
-		<td> 46,518 </td>
+		<td> <b>46,518</b> </td>
 		<td> 21,086 </td>
-		<td> 90,973 </td>
+		<td> <b>90,973</b> </td>
 		<td> 32,953 </td>
-		<td> 62,685 </td>
+		<td> <b>62,685</b> </td>
 		<td> 24,811 </td>
-		<td> 119,705 </td>
-		<td nowrap> 2021/01/23 </br></br> 교차하는/모터쇼 </td>
+		<td> <b>119,705</b> </td>
+		<td nowrap> <b>2021/01/23 </br></br> 교차하는/모터쇼</b> </td>
 	</tr>
 	<tr bgcolor=#fffacd>
-		<td nowrap> [섬광의 광주 늑대] 오오가미 코가 </td>
+		<td nowrap> <b>[섬광의 광주 늑대] 오오가미 코가</b> </td>
 		<td> <img src="5star/[섬광의 광주 늑대] 오오가미 코가.png" width=120 height=160> </td>
 		<td> <img src="5star/[섬광의 광주 늑대] 오오가미 코가(개화).png" width=120 height=160> </td>
-		<td> flash </td>
-		<td> 19,694 </td>
-		<td> 43,480 </td>
-		<td> 24,189 </td>
-		<td> 90,417 </td>
-		<td> 35,241 </td>
+		<td> <b>flash</b> </td>
+		<td> 25,219 </td>
+		<td> 24,562 </td>
+		<td> <b>40,636 </td>
+		<td> <b>90,417</b> </td>
 		<td> 33,027 </td>
-		<td> 55,220 </td>
-		<td> 123,488 </td>
-		<td nowrap> 2021/02/01 </br></br> 피쳐 스카우트 코가편 </td>
+		<td> 33,027 </td>
+		<td> <b>55,220</b> </td>
+		<td> <b>123,488</b> </td>
+		<td nowrap> <b>2021/02/01 </br></br> 피쳐 스카우트 코가편</b> </td>
 	</tr>
   </tbody>
 </table>
