--- a/5star.html
+++ b/5star.html
@@ -607,7 +607,7 @@ margin: auto;
 	<tr bgcolor=#add8e6>
 		<td nowrap> <b>[전진의 모터쇼]아마기 히이로</b> </td>
 		<td> <img src="5star/[전진의 모터쇼]아마기 히이로.png" width=120 height=160> </td>
-		<td> <img src="5star/[전진의 모터쇼]아마기 히이로.png" width=120 height=160> </td>
+		<td> <img src="5star/[전진의 모터쇼]아마기 히이로(개화).png" width=120 height=160> </td>
 		<td> <b>brilliant</b> </td>
 		<td> 23,369 </td>
 		<td> <b>46,518</b> </td>
@@ -633,6 +633,36 @@ margin: auto;
 		<td> <b>55,220</b> </td>
 		<td> <b>123,488</b> </td>
 		<td nowrap> <b>2021/02/01 </br></br> 피쳐 스카우트 코가편</b> </td>
+	</tr>
+	<tr bgcolor=#add8e6>
+		<td nowrap> <b>[지난날의 방랑객] 키류 쿠로</b> </td>
+		<td> <img src="5star/[지난날의 방랑객] 키류 쿠로.png" width=120 height=160> </td>
+		<td> <img src="5star/[지난날의 방랑객] 키류 쿠로(개화).png" width=120 height=160> </td>
+		<td> <b>brilliant</b> </td>
+		<td> 20,278 </td>
+		<td> 20,741 </td>
+		<td> <b>45,329</b> </td>
+		<td> <b>86,348</b> </td>
+		<td> 26,283 </td>
+		<td> 26,666 </td>
+		<td> <b>63,376</b> </td>
+		<td> <b>116,325</b> </td>
+		<td nowrap> <b>2021/02/05 </br></br> 스카우트! 방랑객</b> </td>
+	</tr>
+	<tr bgcolor=#fbceb1>
+		<td nowrap> <b>[활기찬 봄바람] 히비키 와타루</b> </td>
+		<td> <img src="5star/[활기찬 봄바람] 히비키 와타루jpg" width=120 height=160> </td>
+		<td> <img src="5star/[활기찬 봄바람] 히비키 와타루(개화).jpg" width=120 height=160> </td>
+		<td> <b>sparkle</b> </td>
+		<td> 18,698 </td>
+		<td> <b>46,096</b> </td>
+		<td> 24,982 </td>
+		<td> <b>89,776</b> </td>
+		<td> 27,055 </td>
+		<td> <b>63,330</b> </td>
+		<td> 29,087 </td>
+		<td> <b>119,472</b> </td>
+		<td nowrap> <b>2021/02/06 </br></br>춘뢰＊구가의 템페스트 </b> </td>
 	</tr>
   </tbody>
 </table>
