--- a/5star.html
+++ b/5star.html
@@ -651,8 +651,8 @@ margin: auto;
 	</tr>
 	<tr bgcolor=#fbceb1>
 		<td nowrap> <b>[활기찬 봄바람] 히비키 와타루</b> </td>
-		<td> <img src="5star/[활기찬 봄바람] 히비키 와타루jpg" width=120 height=160> </td>
-		<td> <img src="5star/[활기찬 봄바람] 히비키 와타루(개화).jpg" width=120 height=160> </td>
+		<td> <img src="5star/[활기찬 봄바람] 히비키 와타루.png" width=120 height=160> </td>
+		<td> <img src="5star/[활기찬 봄바람] 히비키 와타루(개화).png" width=120 height=160> </td>
 		<td> <b>sparkle</b> </td>
 		<td> 18,698 </td>
 		<td> <b>46,096</b> </td>
